Fix API adjustments for 1.20.1 (BlockEntity, use→useWithoutItem, Math.clamp, appendHoverText)